0.05
	- New feature - play audio file for incoming voice call/sms
	- New feature - Set adio routing for ringing and incall
	- New feature - Add external application handler for incall start and incall stop
	- Bug fix - fix zombie processes for external handlers

0.04:
	- New feature - Import CSV file for names and dials
	- New feature - missed call notification icon
	- New feature - configuration files support
	- New feature - vibration device interface is configurable, this should enable support for other devices
	- New feature - audio device interface is configurable, this should enable support for other devices
	- New feature - execute external applications for call and sms events
	- Bug fix - no signal indicator icon
	- Bug fix - load current active calls during startup
	- Bug fix - accept + for dialer